# robocup_task3

devel/: .catkin  .rosinstall  setup.sh
devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
devel/include/create_node/: TurtleBotConfig.h
devel/include/opencv_apps/: Circle.h  CircleArray.h  CircleArrayStamped.h  Contour.h  ContourArray.h  ContourArrayStamped.h  EdgeDetectionConfig.h  Face.h  FaceArray.h  FaceArrayStamped.h  FaceRecognitionConfig.h  FaceRecognitionTrainRequest.h  FaceRecognitionTrainResponse.h  Flow.h  FlowArray.h  FlowArrayStamped.h  FlowStamped.h  HoughCirclesConfig.h  HoughLinesConfig.h  Line.h  LineArray.h  LineArrayStamped.h  Moment.h  MomentArray.h  MomentArrayStamped.h  Point2D.h  Point2DArray.h  Point2DArrayStamped.h  Point2DStamped.h  PyramidsConfig.h  Rect.h  RectArray.h  RectArrayStamped.h  RotatedRect.h  RotatedRectArray.h  RotatedRectArrayStamped.h  RotatedRectStamped.h  Size.h  SmoothingConfig.h  ThresholdConfig.h
devel/include/robot_control_msgs/: Attributes.h  Feedback.h  HumanAttributes.h  HumanResult.h  Mission.h  NaviAttributes.h  ObjectAttributes.h  ObjectResult.h  PixelCoords.h  Results.h  SpaceCoords.h  SpeechAttributes.h  SpeechResult.h  VisionAttributes.h  VisionResult.h
devel/include/robot_navigation_msgs/: MoveRobotAction.h  MoveRobotActionFeedback.h  MoveRobotActionGoal.h  MoveRobotActionResult.h  MoveRobotFeedback.h  MoveRobotGoal.h  MoveRobotResult.h
devel/include/robot_vision_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForHumanPosesAction.h  CheckForHumanPosesActionFeedback.h  CheckForHumanPosesActionGoal.h  CheckForHumanPosesActionResult.h  CheckForHumanPosesFeedback.h  CheckForHumanPosesGoal.h  CheckForHumanPosesResult.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  FaceResult.h  FaceResults.h  HumanPose.h  HumanPoses.h  Joint.h  ObjectCount.h  PixelPoint.h  SpacePoint.h
devel/lib/opencv_apps/: camshift  (+28 more)
maps/: JupiterOfficeSim.pgm  JupiterOfficeSim.yaml
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_bringup/: CMakeLists.txt  package.xml
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_bringup/config/: arm_group_joints_trajectory_controller.yaml  gripper_group_joints_trajectory_controller.yaml  head_group_joints_trajectory_controller.yaml  jupiterobot_arm_head.yaml
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_bringup/launch/: head_bringup.launch  jupiterobot_arm_head_bringup.launch  jupiterobot_arm_head_moveit_bringup.launch
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  test.launch
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/meshes/: F4G.stl  F5.stl  F53.stl  F5G.stl  F6.stl  F7.stl  arm_pole.stl  finger_active.stl  finger_static.stl
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/urdf/: arm_hardware.xacro  jupiterobot_arm.back.urdf.xacro  jupiterobot_arm.urdf  jupiterobot_arm.urdf.xacro  jupiterobot_arm.xacro  jupiterobot_gripper.xacro
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/urdf/jupiterobot_arm_ikfast_arm_group_plugin/: CMakeLists.txt  jupiterobot_arm_group_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/urdf/jupiterobot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/urdf/jupiterobot_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  jupiterobot_arm.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/jupiterobot/jupiterobot_arm/jupiterobot_arm_description/urdf/jupiterobot_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/jupiterobot/jupiterobot_head/jupiterobot_head_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/jupiterobot/jupiterobot_head/jupiterobot_head_description/meshes/: astra.stl  head_bottom.stl  head_lift.stl  head_mount.stl  head_top.stl
src/jupiterobot/jupiterobot_head/jupiterobot_head_description/urdf/: astra_head.urdf.xacro  astra_top.urdf.xacro  head_hardware.xacro  jupiterobot_head_1dof.urdf.xacro  jupiterobot_head_1dof.xacro  jupiterobot_head_2dof.urdf.xacro  jupiterobot_head_2dof.xacro
src/jupiterobot/jupiterobot_modules/robot_navigation/robot_navigation_msgs/: CMakeLists.txt
src/jupiterobot/jupiterobot_modules/robot_navigation/robot_navigation_msgs/action/: MoveRobot.action
src/jupiterobot/jupiterobot_modules/robot_vision/robot_vision_msgs/: CMakeLists.txt
src/jupiterobot/jupiterobot_modules/robot_vision/robot_vision_msgs/msg/: FaceResult.msg  FaceResults.msg  HumanPose.msg  HumanPoses.msg  Joint.msg  PixelPoint.msg  SpacePoint.msg
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_arm/: CMakeLists.txt
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_arm/launch/: jupiterobot_teleop_arm.launch
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_arm/src/: jupiterobot_teleop_arm.cpp  turtlebot_arm_logitech (╕┤╝■).cpp
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move/: CMakeLists.txt  README.md
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move/launch/: joy_move.launch
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move/src/: jupiterobot_teleop_move.cpp
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move_arm/: CMakeLists.txt  package.xml
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move_arm/launch/: jupiterobot_teleop_move_arm.launch
src/jupiterobot/jupiterobot_teleop/jupiterobot_teleop_move_arm/src/: jupiterobot_teleop_move_arm.cpp
task1/: close_hand.sh  get_reply.py  put_bag.py  start_arm.sh
worlds/: Jupiter_Robot_Office.world  MustarRoom.world
(+1006 files in other folders)
